fixed overflow issues

--- a/source/scss/app.scss
+++ b/source/scss/app.scss
@@ -39,9 +39,10 @@ body {
   position: relative;
   height: 100%;
   width: calc(100vw + 40px);
-  margin-left: -20px;
+  margin-left: -15px;
   padding: 0 20px;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
   -webkit-overflow-scrolling: touch;
 }
 
